# maidou

./: .gitignore  README.md  analyze_text_data.py  app.py  check_annotations.py  cli_editor.py  craft_text_remover.py  create_test_image.py  direct_text_remover.py  generate_sample.py  generate_test_image.py  gui.py  local_ui.py  main.py  ocr_photoshop_automation.py  ocr_text_remover.py  optimized_text_remover.py  package-lock.json  package.json  pdf_processor.py  pdf_to_images.py  polygon_text_detector.py  requirements.txt  run_gui.py  setup.py  simple_text_detector.py  simple_text_remover.py  test_gui.py  test_ocr.py  test_ocr_text_removal.py  test_user_image_optimized.py  text_removal_demo.py  tsconfig.json  verify_env.py
craft/: __init__.py  craft.py  craft_utils.py  file_utils.py  imgproc.py
image_processing/: advanced_inpainting.py  analyze_image.py  check_ocr.py  color_based_text_detection.py  craft_integrated_pipeline.py  craft_text_detection.py  (+21 more)
pdf-processor/: .project  pom.xml  pyproject.toml
pdf-processor/app/: main.py
pdf-processor/src/main/java/com/maidou/pdf/: Main.java  OCRProcessor.java  PDFProcessor.java
pdf-processor/src/main/java/com/maidou/pdf/controller/: PDFController.java
pdf-processor/src/main/java/com/maidou/pdf/model/: Color.java  Rectangle.java  TextAlignment.java  TextBox.java
pdf-processor/src/main/java/com/maidou/pdf/storage/: MetadataStorage.java
pdf-processor/src/test/java/com/maidou/pdf/: OCRProcessorTest.java  PDFProcessorTest.java
pdf-processor/src/test/java/com/maidou/pdf/controller/: PDFControllerTest.java
(+63 files in other folders)
