[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin <devin@devin.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
pandas = "^2.2.3"
pymupdf = "^1.25.1"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
